# Mokt

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml  dokka.yml  main.yml
authentication/: build.gradle.kts
authentication/src/commonMain/kotlin/dev/redtronics/mokt/: Keycloak.kt  Microsoft.kt  OAuth2.kt
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: mokt-build-constants.gradle.kts  mokt-cinterop-generation.gradle.kts  mokt-core.gradle.kts  mokt-docs.gradle.kts  mokt-multiplatform.gradle.kts  mokt-publishing.gradle.kts
buildSrc/src/main/kotlin/dev/redtronics/buildsrc/: Compile.kt  Os.kt  PatchVersions.kt  Process.kt  Project.kt  Sync.kt
common/: build.gradle.kts
common/src/commonMain/kotlin/dev/redtronics/mokt/: Annotation.kt  Base64.kt
common/src/iosMain/kotlin/dev/redtronics/mokt/: System.ios.kt
common/src/jsMain/kotlin/dev/redtronics/mokt/: Base64.js.kt
common/src/jvmMain/kotlin/dev/redtronics/mokt/: Base64.jvm.kt
common/src/linuxMain/kotlin/dev/redtronics/mokt/: System.linux.kt
common/src/macosMain/kotlin/dev/redtronics/mokt/: Base64.macos.kt  System.macos.kt
core/: build.gradle.kts
docs/: Dockerfile  docker-compose.yml
example/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
inspect/: build.gradle.kts
inspect/src/main/kotlin/: Main.kt
mokt-native/: Cargo.toml
mokt-native/include/: mokt.h
mokt-native/src/: base64.rs  browser.rs  lib.rs  system.rs
(+28 files in other folders)
