[package]
name = "mokt-native"
description = "Native bindings for Mokt."
authors = ["Nils Jaekel <nils.jaekel@redtronics.dev>", "David Ernst <david.ernst@davils.net>"]
license = "MIT"
readme = "../README.md"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.28.0"

[dependencies]
libc = "0.2.162"
base64 = "0.22.1"
